# narrative-learning

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  DATAPAINTER_FORMAT.md  DATAPAINTER_USAGE.md  DATA_MANAGEMENT.md  Makefile  POSTGRESQL_MIGRATION.md  README.md  TODO.md  anthropic.env  backup_narrative.sh  baseline.py  chartutils.py  check_round_consistency.py  check_round_time_span.py  cleanup-legacy-titanic.sql  cleanup_unrun_investigations.sql  common.py  compare_dataset_tables.py  complete_rounds.py  confusion_matrix.py  convert-titanic-to-masked.py  convert_timestamp_columns.sql  create_task_csv_file.py  cron.sh  datasetconfig.py  decode.py  delete_duplicate_rounds.sql  delete_investigation.py  delete_round.py  draw_pair_plot.py  env_generator.py  env_settings.py  envsetup.sh  export_website.py  falcon.env  find_duplicate_investigations.py  find_incomplete_investigations.py  (+65 more)
chatbot-arena/: elo.csv  elo.date  elo.url  process.py  translation.json
configs/: espionage.config.json  potions.config.json  sgc_coral.config.json  timetravel_insurance.config.json  titanic_medical.config.json  wisconsin_exoplanets.config.json
conversions/: breast_cancer  southgermancredit  titanic
datasets/: breast_cancer.csv  southgermancredit.csv
dbtemplates/: espionage.sql  potions.sql  sgc_coral.sql  sgc_coral.sqlite  timetravel_insurance.sql  titanic_medical.sql  titanic_medical.sqlite  wisconsin_exoplanets.sql  wisconsin_exoplanets.sqlite
dumps/: .gitignore
legacy-outputs/: .gitignore  cumulativewc-model-size-definitions.tex  model_details.tex  titanic_model_projection.tex  (+5 more)
(+270 files in other folders)
