[project]
name = "narrative-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.46.0",
    "fitter>=1.7.1",
    "google-genai>=1.5.0",
    "matplotlib>=3.10.0",
    "openai>=1.63.2",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "psycopg2-binary>=2.9.9",
    "imodels>=2.0.0",
    "interpret>=0.6.12",
    "jinja2>=3.1.4",
]
